Retirada do target blank

--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
       </ul>
       <div class="nav__btns">
         <button class="btn">
-          <a href="https://pedido.anota.ai/" target="_blank">
+          <a href="https://pedido.anota.ai/">
             <i class="ri-shopping-cart-line"></i>
           </a>
         </button>
@@ -103,20 +103,19 @@
         <div class="footer__col">
           <ul class="socials">
             <li>
-              <a href="https://www.facebook.com/santapizzapp" target="_blank">
+              <a href="https://www.facebook.com/santapizzapp">
                 <i class="ri-facebook-fill"></i>
               </a>
             </li>
             <li>
               <a
                 href="https://api.whatsapp.com/send/?phone=%2B5518981875868&text&type=phone_number&app_absent=0"
-                target="_blank"
               >
                 <i class="ri-whatsapp-fill"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/santapizzapp/" target="_blank">
+              <a href="https://www.instagram.com/santapizzapp/">
                 <i class="ri-instagram-fill"></i>
               </a>
             </li>
