--- a/contato.html
+++ b/contato.html
@@ -29,11 +29,9 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
       <div class="nav__btns">
-        <button class="btn">
-          <a href="https://pedido.anota.ai/">
-            <i class="ri-shopping-cart-line"></i>
-          </a>
-        </button>
+        <a href="https://pedido.anota.ai/" class="btn">
+          <i class="ri-shopping-cart-line"></i>
+        </a>
       </div>
     </nav>
 
@@ -126,5 +124,8 @@
         Copyright © 2025 Santa Pizza.
       </div>
     </footer>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
+  </body>
+</html>
