--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
       <div class="nav__btns">
-        <button class="btn">
-          <a href="https://pedido.anota.ai/">
-            <i class="ri-shopping-cart-line"></i>
-          </a>
-        </button>
+        <a href="https://pedido.anota.ai/" class="btn">
+          <i class="ri-shopping-cart-line"></i>
+        </a>
       </div>
     </nav>
 
@@ -42,16 +40,12 @@
         <img src="assets/pizza2.png" alt="header" />
       </div>
       <div class="header__content">
-        <h1>
-          BEM-VINDO AO MUNDO DA <span>SANTA</span> PIZZA
-        </h1>
+        <h1>BEM-VINDO AO MUNDO DA <span>SANTA</span> PIZZA</h1>
         <p class="section__description">
           Embarque em uma deliciosa jornada de sabores! Descubra pizzas irresistíveis, feitas com carinho para trazer alegria a cada fatia. Bem-vindo ao seu refúgio de sabor! 🍕🔥
         </p>
         <div class="header__btn">
-          <button class="btn">
-            <a href="https://pedido.anota.ai/">Peça agora</a>
-          </button>
+          <a href="https://pedido.anota.ai/" class="btn">Peça agora</a>
         </div>
         <ul class="socials">
           <li>
@@ -98,7 +92,8 @@
             </li>
             <li>
               <a
-                href="https://api.whatsapp.com/send/?phone=%2B5518981875868&text&type=phone_number&app_absent=0">
+                href="https://api.whatsapp.com/send/?phone=%2B5518981875868&text&type=phone_number&app_absent=0"
+              >
                 <i class="ri-whatsapp-fill"></i>
               </a>
             </li>
