--- a/nossoambiente.html
+++ b/nossoambiente.html
@@ -29,11 +29,9 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
       <div class="nav__btns">
-        <button class="btn">
-          <a href="https://pedido.anota.ai/">
-            <i class="ri-shopping-cart-line"></i>
-          </a>
-        </button>
+        <a href="https://pedido.anota.ai/" class="btn">
+          <i class="ri-shopping-cart-line"></i>
+        </a>
       </div>
     </nav>
 
@@ -93,7 +91,8 @@
             </li>
             <li>
               <a
-                href="https://api.whatsapp.com/send/?phone=%2B5518981875868&text&type=phone_number&app_absent=0">
+                href="https://api.whatsapp.com/send/?phone=%2B5518981875868&text&type=phone_number&app_absent=0"
+              >
                 <i class="ri-whatsapp-fill"></i>
               </a>
             </li>
