--- a/contato.html
+++ b/contato.html
@@ -35,6 +35,7 @@
       </div>
     </nav>
 
+    <a id="contact"></a>
     <section class="section__container contact__container">
       <h2 class="section__header">Entre em Contato</h2>
       <p class="section__description">
