--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -36,7 +36,7 @@
     </nav>
 
     <section class="section__container discover__container" id="categories">
-      <h2 class="section__header">História da Empresa</h2>
+      <h2 class="section__header">Nossa História</h2>
       <p class="section__description">
         Iniciamos em 2019 com um modelo de delivery, movidos pela paixão pela gastronomia e o compromisso com qualidade. O sucesso foi imediato, consolidando nossa marca. Com o crescimento, expandimos para atendimento presencial, criando um ambiente acolhedor. Seguimos inovando, mantendo a essência de qualidade, dedicação e excelência para encantar nossos clientes.
       </p>
